updated project structure.

--- a/Tests/ProductService.Application.Tests.Unit/ProductService.Application.Tests.Unit.csproj
+++ b/Tests/ProductService.Application.Tests.Unit/ProductService.Application.Tests.Unit.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\ProductService.Application\ProductService.Application.csproj" />
+    <ProjectReference Include="..\..\src\ProductService.Application\ProductService.Application.csproj" />
   </ItemGroup>
 
 </Project>
